--- a/modeling/gen_data.ipynb
+++ b/modeling/gen_data.ipynb
@@ -3878,7 +3878,7 @@
   {
    "cell_type": "code",
    "execution_count": 387,
-   "id": "65ac127c",
+   "id": "3ec0ca5f",
    "metadata": {},
    "outputs": [
     {
@@ -3946,7 +3946,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "3f451b83",
+   "id": "4d8b96df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3963,7 +3963,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "f0f72ce1",
+   "id": "ebf863a0",
    "metadata": {},
    "outputs": [
     {
@@ -3984,7 +3984,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "b6c45aed",
+   "id": "901167f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3999,7 +3999,7 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "id": "232c1433",
+   "id": "43355325",
    "metadata": {},
    "outputs": [
     {
@@ -4020,7 +4020,7 @@
   {
    "cell_type": "code",
    "execution_count": 270,
-   "id": "9b9afcc6",
+   "id": "1ebf41b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4035,7 +4035,7 @@
   {
    "cell_type": "code",
    "execution_count": 288,
-   "id": "3b76a5d9",
+   "id": "42af5288",
    "metadata": {},
    "outputs": [
     {
@@ -4056,7 +4056,7 @@
   {
    "cell_type": "code",
    "execution_count": 295,
-   "id": "21c5269d",
+   "id": "cb521ff2",
    "metadata": {},
    "outputs": [
     {
@@ -4296,7 +4296,7 @@
   {
    "cell_type": "code",
    "execution_count": 333,
-   "id": "93b4bcc8",
+   "id": "f45a8b22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4338,7 +4338,7 @@
   {
    "cell_type": "code",
    "execution_count": 334,
-   "id": "3830ccea",
+   "id": "2f4ca45b",
    "metadata": {},
    "outputs": [
     {
@@ -4359,7 +4359,7 @@
   {
    "cell_type": "code",
    "execution_count": 340,
-   "id": "01ec3a47",
+   "id": "5be14b5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4369,7 +4369,7 @@
   {
    "cell_type": "code",
    "execution_count": 342,
-   "id": "e4056e18",
+   "id": "f79ed2d6",
    "metadata": {},
    "outputs": [
     {
@@ -4404,7 +4404,7 @@
   {
    "cell_type": "code",
    "execution_count": 343,
-   "id": "e5493cf0",
+   "id": "21357d59",
    "metadata": {},
    "outputs": [
     {
@@ -4425,7 +4425,7 @@
   {
    "cell_type": "code",
    "execution_count": 464,
-   "id": "b099903a",
+   "id": "9d573702",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4448,7 +4448,7 @@
   {
    "cell_type": "code",
    "execution_count": 467,
-   "id": "f44e7087",
+   "id": "96fe3fbb",
    "metadata": {
     "scrolled": true
    },
@@ -4471,7 +4471,7 @@
   {
    "cell_type": "code",
    "execution_count": 468,
-   "id": "789545ba",
+   "id": "afcbcb41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4484,7 +4484,7 @@
   {
    "cell_type": "code",
    "execution_count": 480,
-   "id": "003546e1",
+   "id": "f7ad4f4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4494,7 +4494,7 @@
   {
    "cell_type": "code",
    "execution_count": 483,
-   "id": "cead18c7",
+   "id": "53a8d70f",
    "metadata": {},
    "outputs": [
     {
@@ -4534,7 +4534,7 @@
   {
    "cell_type": "code",
    "execution_count": 484,
-   "id": "ce7d9d66",
+   "id": "9e02e3cb",
    "metadata": {},
    "outputs": [
     {
@@ -4555,7 +4555,7 @@
   {
    "cell_type": "code",
    "execution_count": 493,
-   "id": "cac81037",
+   "id": "f4057695",
    "metadata": {},
    "outputs": [
     {
@@ -5576,7 +5576,7 @@
   {
    "cell_type": "code",
    "execution_count": 540,
-   "id": "03511df6",
+   "id": "6edbf630",
    "metadata": {
     "scrolled": true
    },
@@ -5608,7 +5608,7 @@
   {
    "cell_type": "code",
    "execution_count": 539,
-   "id": "e48fd664",
+   "id": "ede8537c",
    "metadata": {},
    "outputs": [
     {
@@ -6628,7 +6628,7 @@
   {
    "cell_type": "code",
    "execution_count": 537,
-   "id": "451219c8",
+   "id": "037e264b",
    "metadata": {},
    "outputs": [
     {
@@ -6648,7 +6648,7 @@
   {
    "cell_type": "code",
    "execution_count": 509,
-   "id": "aae5c024",
+   "id": "34f4b659",
    "metadata": {
     "scrolled": true
    },
@@ -6670,7 +6670,7 @@
   {
    "cell_type": "code",
    "execution_count": 507,
-   "id": "f3ac7cd5",
+   "id": "3369e9ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6722,7 +6722,7 @@
   {
    "cell_type": "code",
    "execution_count": 549,
-   "id": "6a209a22",
+   "id": "9119532b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6749,6 +6749,19 @@
     "    mail_path = adps_messages_path + '/' + hashsum.hex_digest[:10] + '.json'\n",
     "    with open(mail_path, 'wb') as output_json_file:\n",
     "        output_json_file.write(mail_json_bytes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 554,
+   "id": "f36e6445",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(PYADPS_PATH + '/coords.csv', 'w') as coords_file:\n",
+    "    for coords_list in list_of_cities:\n",
+    "        rows = ['{0},{1},,\\n'.format(*coords) for coords in coords_list]\n",
+    "        coords_file.writelines(rows)"
    ]
   }
  ],
